--- a/index.html
+++ b/index.html
@@ -1,26 +1,69 @@
-Политика обработки персональных данных
-Дата последнего обновления: 18.11.2024
-1. Общие положения
-Настоящая Политика обработки персональных данных (далее — «Политика») определяет порядок обработки персональных данных пользователей мобильного приложения "МедЭциклопедия" (далее — «Приложение»).
-2. Сбор и обработка персональных данных
-Приложение "МедЭциклопедия" не осуществляет сбор, хранение, обработку или передачу каких-либо персональных данных пользователей.
-3. Функционирование приложения
-Приложение представляет собой автономную медицинскую энциклопедию, которая:
-Работает полностью в автономном режиме
-Не требует регистрации пользователей
-Не собирает информацию о пользователях
-Не отправляет никакие данные на внешние серверы
-Не использует файлы cookies
-Не отслеживает местоположение пользователей
-4. Разрешения приложения
-Приложение запрашивает только базовые разрешения, необходимые для его функционирования:
-Доступ к интернету (только для перехода по внешней ссылке на Telegram-канал)
-5. Безопасность
-Поскольку приложение не собирает персональные данные, риски, связанные с их обработкой, отсутствуют.
-6. Изменения в политике конфиденциальности
-Мы оставляем за собой право вносить изменения в данную Политику. При внесении изменений в актуальной редакции указывается дата последнего обновления.
-7. Контактная информация
-По всем вопросам, связанным с данной Политикой, вы можете связаться с нами через Telegram-канал: https://t.me/doc_talks
-8. Заключительные положения
-Используя Приложение, вы подтверждаете, что ознакомились с данной Политикой.
-Настоящая Политика действует бессрочно с момента ее опубликования.
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Политика обработки персональных данных</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        h2 {
+            color: #444;
+            margin-top: 30px;
+        }
+        ul {
+            margin-left: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Политика обработки персональных данных</h1>
+
+    <p><strong>Дата последнего обновления: [текущая дата]</strong></p>
+
+    <h2>1. Общие положения</h2>
+    <p>Настоящая Политика обработки персональных данных (далее — «Политика») определяет порядок обработки персональных данных пользователей мобильного приложения "МедЭциклопедия" (далее — «Приложение»).</p>
+
+    <h2>2. Сбор и обработка персональных данных</h2>
+    <p>Приложение "МедЭциклопедия" не осуществляет сбор, хранение, обработку или передачу каких-либо персональных данных пользователей.</p>
+
+    <h2>3. Функционирование приложения</h2>
+    <p>Приложение представляет собой автономную медицинскую энциклопедию, которая:</p>
+    <ul>
+        <li>Работает полностью в автономном режиме</li>
+        <li>Не требует регистрации пользователей</li>
+        <li>Не собирает информацию о пользователях</li>
+        <li>Не отправляет никакие данные на внешние серверы</li>
+        <li>Не использует файлы cookies</li>
+        <li>Не отслеживает местоположение пользователей</li>
+    </ul>
+
+    <h2>4. Разрешения приложения</h2>
+    <p>Приложение запрашивает только базовые разрешения, необходимые для его функционирования:</p>
+    <ul>
+        <li>Доступ к интернету (только для перехода по внешней ссылке на Telegram-канал)</li>
+    </ul>
+
+    <h2>5. Безопасность</h2>
+    <p>Поскольку приложение не собирает персональные данные, риски, связанные с их обработкой, отсутствуют.</p>
+
+    <h2>6. Изменения в политике конфиденциальности</h2>
+    <p>Мы оставляем за собой право вносить изменения в данную Политику. При внесении изменений в актуальной редакции указывается дата последнего обновления.</p>
+
+    <h2>7. Контактная информация</h2>
+    <p>По всем вопросам, связанным с данной Политикой, вы можете связаться с нами через Telegram-канал: <a href="https://t.me/doc_talks">https://t.me/doc_talks</a></p>
+
+    <h2>8. Заключительные положения</h2>
+    <p>Используя Приложение, вы подтверждаете, что ознакомились с данной Политикой.</p>
+    <p>Настоящая Политика действует бессрочно с момента ее опубликования.</p>
+</body>
+</html>
