--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <h1>Политика обработки персональных данных</h1>
 
-    <p><strong>Дата последнего обновления: [текущая дата]</strong></p>
+    <p><strong>Дата последнего обновления: 18.11.2024</strong></p>
 
     <h2>1. Общие положения</h2>
     <p>Настоящая Политика обработки персональных данных (далее — «Политика») определяет порядок обработки персональных данных пользователей мобильного приложения "МедЭциклопедия" (далее — «Приложение»).</p>
@@ -60,7 +60,7 @@
     <p>Мы оставляем за собой право вносить изменения в данную Политику. При внесении изменений в актуальной редакции указывается дата последнего обновления.</p>
 
     <h2>7. Контактная информация</h2>
-    <p>По всем вопросам, связанным с данной Политикой, вы можете связаться с нами через Telegram-канал: <a href="https://t.me/doc_talks">https://t.me/doc_talks</a></p>
+    <p>По всем вопросам, связанным с данной Политикой, вы можете связаться с нами по почте kazakovs.app@gmail.com</p>
 
     <h2>8. Заключительные положения</h2>
     <p>Используя Приложение, вы подтверждаете, что ознакомились с данной Политикой.</p>
